# cmake-cpp-example

./: .envrc  .gitignore  CMakeLists.txt  README.md
docs/: Doxyfile.in
src/: CMakeLists.txt  blas.hpp  constants.cpp  constants.hpp  envs.cpp.in  envs.hpp  main.cpp  mymath.cpp  mymath.hpp
tests/: CMakeLists.txt  test_mymath.cpp
